# openai-structured-outputs-examples

./: .gitignore  REAME.md  pyproject.toml
examples/: action-item-extractor.py  reasoning-engine.py  ui-generator.py
